<resources>
    <string name="app_name">enigma_movie_theater</string>
    <string name="menu_item_show_movies">Show Movies</string>
    <string name="menu_item_create_movie">Create Movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_movie_cover">movie cover</string>
    <string name="hint_input_title">Title</string>
    <string name="hint_input_duration">Duration</string>
    <string name="hint_input_synopsis">Synopsis</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="hint_input_image_url">Image URL</string>
    <string name="template_duration_130_min">130 Min</string>
    <string name="some_synopsis">Some synopsis</string>
</resources>